Created new TaskCooldown system to avoid overlapping events Rewritten checkpoint system Added option to warn players if they've missed checkpoints Fixed some conversations not sending messages